@@ -138,6 +138,8 @@ Release 2.4.0 - UNRELEASED
     HDFS-3405. Checkpointing should use HTTP POST or PUT instead of GET-GET
     to send merged fsimages. (Vinayakumar B via wang)
 
+    HDFS-6085. Improve CacheReplicationMonitor log messages a bit (cmccabe)
+
   OPTIMIZATIONS
 
     HDFS-5790. LeaseManager.findPath is very slow when many leases need recovery
